--- a/RecipeNest/AppShell.xaml
+++ b/RecipeNest/AppShell.xaml
@@ -10,5 +10,8 @@
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-
+    <ShellContent
+       Title="Recipes"
+       ContentTemplate="{DataTemplate local:RecipesPage}"
+       Route="RecipesPage" />
 </Shell>
