--- a/RecipeNest/RecipesPage.xaml
+++ b/RecipeNest/RecipesPage.xaml
@@ -6,17 +6,17 @@
     <VerticalStackLayout Padding="20" Spacing="15" >
         <!-- Search Bar + Add Button -->
         <VerticalStackLayout Spacing="10" HorizontalOptions="Center">
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+            <HorizontalStackLayout HorizontalOptions="Center">
                 <Label Text="🍽️ My Recipes" FontSize="28" FontAttributes="Bold"/>
             </HorizontalStackLayout>
-            <HorizontalStackLayout HorizontalOptions="Center">
+            <HorizontalStackLayout HorizontalOptions="Center" Spacing="10">
             <SearchBar Placeholder="Search recipes..."
                 Text="{Binding SearchText}"
                 SearchCommand="{Binding PerformSearchCommand}" 
-                HorizontalOptions="FillAndExpand"/>
+                HorizontalOptions="Fill" />
             <Button Text="➕" 
                 Clicked="AddRecipe_Clicked"
-                WidthRequest="50"/>
+                WidthRequest="50" />
         </HorizontalStackLayout>
         </VerticalStackLayout>
 
@@ -26,11 +26,27 @@
                         SelectionChanged="CollectionView_SelectionChanged"
                         Margin="15"
                         >
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical" />
+            </CollectionView.ItemsLayout>
+            
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame BorderColor="#cccccc" BackgroundColor="Black" VerticalOptions="Center" CornerRadius="10" Padding="10" Margin="5">
-                        <Label Text="{Binding Name}" FontSize="18" Margin="10" />
-                    </Frame>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Border  BackgroundColor="Black" VerticalOptions="Center" Padding="10" Margin="5">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="10"/>
+                            </Border.StrokeShape>
+                            <Label Text="{Binding Name}" FontSize="18" Margin="10" />
+                        </Border>
+                    </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
