--- a/RecipeNest/ShoppingListsDetailsPage.xaml
+++ b/RecipeNest/ShoppingListsDetailsPage.xaml
@@ -19,6 +19,7 @@
                         <Grid ColumnDefinitions="Auto, *, Auto" Padding="10" RowSpacing="5">
                             <!-- Checkbox -->
                             <CheckBox IsChecked="{Binding IsChecked}" 
+                                      CheckedChanged="CheckBox_CheckedChanged"
                                       VerticalOptions="Center" />
 
                              <!--Item Name--> 
