Added a tesseract, working on geting recipes from image

--- a/RecipeNest/AppShell.xaml
+++ b/RecipeNest/AppShell.xaml
@@ -18,4 +18,8 @@
         Title="Shopping Lists"
         ContentTemplate="{DataTemplate local:ShoppingListsPage}"
         Route="ShoppingListsPage" />
+    <ShellContent
+        Title="Tesseract Tests"
+        ContentTemplate="{DataTemplate local:TesseractTests}"
+        Route="TesseractTests" />
 </Shell>
