Refactor TesseractTests into TesseractOcrRecipe page Capture headers to get correct ingredients and preparation

--- a/RecipeNest/AppShell.xaml
+++ b/RecipeNest/AppShell.xaml
@@ -20,6 +20,6 @@
         Route="ShoppingListsPage" />
     <ShellContent
         Title="Tesseract Tests"
-        ContentTemplate="{DataTemplate local:TesseractTests}"
+        ContentTemplate="{DataTemplate local:TesseractOcrRecipe}"
         Route="TesseractTests" />
 </Shell>
