--- a/RecipeNest/TesseractOcrRecipe.xaml
+++ b/RecipeNest/TesseractOcrRecipe.xaml
@@ -6,13 +6,16 @@
     <ScrollView>
         <VerticalStackLayout Padding="30">
             <Button Text="Wybierz zdjęcie do zczytania" Clicked="OnPickPhotoClicked"/>
-            <Label Text="-------------Składniki----------------" FontSize="18"></Label>
+            <HorizontalStackLayout>
+                <RadioButton Content="FullText" GroupName="ParsingModes" Value="FullText" IsChecked="True" CheckedChanged="RadioButton_CheckedChanged"></RadioButton>
+                <RadioButton Content="Line" GroupName="ParsingModes" Value="Line" IsChecked="False" CheckedChanged="RadioButton_CheckedChanged"></RadioButton>
+                <RadioButton Content="Column" GroupName="ParsingModes" Value="Column" IsChecked="False" CheckedChanged="RadioButton_CheckedChanged"></RadioButton>
+            </HorizontalStackLayout>
             <Label x:Name="Ingredients"></Label>
 
-            <Label Text="--------------------------Sposób przyrządzenia--------------------------" FontSize="18"></Label>
             <Label x:Name="Instructions"></Label>
 
-            <!--<Label x:Name="OcrResultLabel" Text="Tu pojawi się tekst z OCR" />-->
+            <Label x:Name="OcrResultLabel" Text="Tu pojawi się tekst z OCR" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
