--- a/RecipeNest/AddShoppingListPage.xaml
+++ b/RecipeNest/AddShoppingListPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RecipeNest.AddShoppingListPage"
+             x:Name="AddListPageContext"
              Title="AddShoppingListPage">
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="20">
@@ -19,7 +20,10 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Border Padding="10" Margin="5" BackgroundColor="#f2f2f2">
-                            <Label Text="{Binding Name}" />
+                            <HorizontalStackLayout>
+                                <Label Text="{Binding Name}" />
+                                <Button Text="Remove" Command="{Binding BindingContext.DeleteItemCommand, Source={x:Reference AddListPageContext}}" CommandParameter="{Binding .}" HorizontalOptions="End" />
+                            </HorizontalStackLayout>
                         </Border>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
