--- a/RecipeNest/Resources/Styles/Styles.xaml
+++ b/RecipeNest/Resources/Styles/Styles.xaml
@@ -17,6 +17,7 @@
         <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="StrokeShape" Value="Rectangle"/>
         <Setter Property="StrokeThickness" Value="1"/>
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray600}}"/>
     </Style>
 
     <Style TargetType="BoxView">
