Add recipe fetching functionality and UI updates

--- a/RecipeNest/MainPage.xaml
+++ b/RecipeNest/MainPage.xaml
@@ -36,6 +36,7 @@
                    CornerRadius="20"
                    Margin="0,20,0,0"/>-->
 
+            <Label x:Name="testLabel"></Label>
         </VerticalStackLayout>
     </ScrollView>
 
